buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'net.minecraftforge.gradle' version '5.1.+'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

group = 'dev.momostudios'
version = '2.2-b04k'

java {
    archivesBaseName = 'ColdSweat'
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: 'official', version: '1.18.2'
    accessTransformer = file("src/main/resources/META-INF/coldsweat_at.cfg")
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'cold_sweat', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                cold_sweat {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "cold_sweat.mixin-refmap.json"
    config 'cold_sweat.mixin.json'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    mavenCentral()
}

dependencies {
    implementation 'com.github.t9t.minecraft-rcon-client:minecraft-rcon-client:1.0.0'
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.4'
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    runtimeOnly fg.deobf("curse.maven:spark-361579:4505375")
    runtimeOnly fg.deobf("curse.maven:jei-238222:3940240")
    //runtimeOnly fg.deobf("curse.maven:panorama-440465:3855307")
    runtimeOnly fg.deobf("curse.maven:atmospheric-362393:4367068")
    //runtimeOnly fg.deobf("curse.maven:environmental-388992:4381294")
    runtimeOnly fg.deobf("curse.maven:blueprint-382216:3991478")
    runtimeOnly fg.deobf("curse.maven:byg-247560:4036050")
    runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:3759236")
    runtimeOnly fg.deobf("curse.maven:terrablender-563928:3816497")
    runtimeOnly fg.deobf("curse.maven:seasons-291874:3693807")
    runtimeOnly fg.deobf("curse.maven:coroutil-237749:4426517")
    runtimeOnly fg.deobf("curse.maven:tinkers-74072:4509008")
    runtimeOnly fg.deobf("curse.maven:mantle-74924:4509007")
    runtimeOnly fg.deobf("curse.maven:serene-seasons-291874:3804257")

    implementation fg.deobf("curse.maven:curios-309927:4418032")
    implementation fg.deobf("curse.maven:armorunderwear-310383:4502893")
    implementation fg.deobf("curse.maven:carrots-311327:4382778")
    implementation fg.deobf("curse.maven:create-328085:4550986")

    compileOnly fg.deobf("curse.maven:storms-237746:4426524")
    compileOnly fg.deobf("curse.maven:flywheel-486392:4341461")
    compileOnly fg.deobf("curse.maven:sereneapi-291874:3693809")
    compileOnly fg.deobf("curse.maven:vampirism-233029:4082397")
    compileOnly fg.deobf("curse.maven:werewolves-417851:4050257")
}

// Example for how to get properties into the manifest for reading at runtime.
jar {
    manifest {
        attributes([
                "Specification-Title"     : "cold_sweat",
                "Specification-Vendor"    : "Mikul",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Mikul",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "TweakerClass"            : "org.spongepowered.asm.launch.MixinTweaker",
                "TweakOrder"              : 0,
                "MixinConfigs"            : "cold_sweat.mixin.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
